force-app/main/default/objects/FedEx_Status_Mapping__c/FedEx_Status_Mapping__c.object-meta.xml
<CustomObject>
    <label>FedEx Status Mapping</label>
    <nameField>
        <label>FedEx Status Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Status Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>