force-app/main/default/objects/FedEx_Status_Mapping__c/fields/Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exception</label>
    <type>Checkbox</type>
</CustomField>